<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/fade3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        tools:context=".card">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/font"
            android:textSize="18sp"
            app:fontFamily="@font/marvel_bold_italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bangalore"
            android:textColor="@color/font"
            android:textSize="18sp"
            app:fontFamily="@font/marvel_bold_italic"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weatherstate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weatherstate"
            android:textColor="@color/font"
            android:textSize="18sp"
            app:fontFamily="@font/marvel_bold_italic"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


